--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.16.2",
+    "@supabase/supabase-js": "^2.45.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
