docs: update readme and include MIT License

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "back-end",
     "portfolio"
   ],
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
